vix/tests/checker-corpus/reject/duplicate-item.vix
fn build() -> Int {
    1
}

fn build() -> Int {
    2
}
